--- a/libraries/dataset/dataset.vcxproj.filters
+++ b/libraries/dataset/dataset.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="include\DatasetLoader.h">
       <Filter>include</Filter>
     </ClInclude>
+    <ClInclude Include="include\MappedParser.h">
+      <Filter>include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\SupervisedExample.cpp">
@@ -87,6 +90,9 @@
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="src\DenseDataVector.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\MappedParser.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
