--- a/libraries/predictors/predictors.vcxproj.filters
+++ b/libraries/predictors/predictors.vcxproj.filters
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="include">
@@ -25,7 +25,7 @@
     <ClCompile Include="src\MutableDecisionTree.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="include\SharedLinearBinaryPredictor.cpp">
+    <ClCompile Include="src\SharedLinearBinaryPredictor.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
