--- a/libraries/layers/layers.vcxproj.filters
+++ b/libraries/layers/layers.vcxproj.filters
@@ -44,6 +44,9 @@
     <ClInclude Include="include\Input.h">
       <Filter>include</Filter>
     </ClInclude>
+    <ClInclude Include="include\CoordinateListFactory.h">
+      <Filter>include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Io.cpp">
@@ -74,6 +77,9 @@
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="include\Input.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CoordinateListFactory.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
