--- a/trainers/sgd/sgd.vcxproj.filters
+++ b/trainers/sgd/sgd.vcxproj.filters
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="src">
@@ -14,7 +14,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\args.h">
+    <ClInclude Include="include\CommandLineArguments.h">
       <Filter>include</Filter>
     </ClInclude>
   </ItemGroup>
