--- a/libraries/utilities/utilities.vcxproj
+++ b/libraries/utilities/utilities.vcxproj
@@ -80,11 +80,14 @@
     <ClInclude Include="..\amalgamated_jsoncpp\json\json.h" />
     <ClInclude Include="include\BinaryClassificationEvaluator.h" />
     <ClInclude Include="include\CommandLineParser.h" />
+    <ClInclude Include="include\DataSaveArguments.h" />
     <ClInclude Include="include\files.h" />
     <ClInclude Include="include\JsonSerializer.h" />
+    <ClInclude Include="include\DataLoadArguments.h" />
+    <ClInclude Include="include\MapLoadArguments.h" />
+    <ClInclude Include="include\MapSaveArguments.h" />
     <ClInclude Include="include\Parser.h" />
     <ClInclude Include="include\randomEngines.h" />
-    <ClInclude Include="include\SharedArguments.h" />
     <ClInclude Include="include\VectorIterator.h" />
   </ItemGroup>
   <ItemGroup>
@@ -98,8 +101,12 @@
     <ClCompile Include="..\amalgamated_jsoncpp\jsoncpp.cpp" />
     <ClCompile Include="src\BinaryClassificationEvaluator.cpp" />
     <ClCompile Include="src\CommandLineParser.cpp" />
+    <ClCompile Include="src\DataSaveArguments.cpp" />
     <ClCompile Include="src\files.cpp" />
     <ClCompile Include="src\JsonSerializer.cpp" />
+    <ClCompile Include="src\DataLoadArguments.cpp" />
+    <ClCompile Include="src\MapLoadArguments.cpp" />
+    <ClCompile Include="src\MapSaveArguments.cpp" />
     <ClCompile Include="src\randomEngines.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
