--- a/libraries/linear/linear.vcxproj
+++ b/libraries/linear/linear.vcxproj
@@ -53,7 +53,7 @@
       <SDLCheck>true</SDLCheck>
       <PrecompiledHeaderFile />
       <PrecompiledHeaderOutputFile />
-      <AdditionalIncludeDirectories>include;..\common\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>include;..\types\include</AdditionalIncludeDirectories>
       <OpenMPSupport>false</OpenMPSupport>
     </ClCompile>
     <Link>
@@ -73,7 +73,7 @@
       <SDLCheck>true</SDLCheck>
       <PrecompiledHeaderFile />
       <PrecompiledHeaderOutputFile />
-      <AdditionalIncludeDirectories>include;..\common\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>include;..\types\include</AdditionalIncludeDirectories>
       <OpenMPSupport>true</OpenMPSupport>
     </ClCompile>
     <Link>
