--- a/libraries/layers/layers.vcxproj
+++ b/libraries/layers/layers.vcxproj
@@ -51,7 +51,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>include;..\utilities\include;..\common\include;..\linear\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>include;..\utilities\include;..\types\include;..\linear\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -67,7 +67,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>include;..\utilities\include;..\common\include;..\linear\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>include;..\utilities\include;..\types\include;..\linear\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
