--- a/libraries/types/types.vcxproj
+++ b/libraries/types/types.vcxproj
@@ -11,8 +11,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{50EE045D-4DAA-44B9-9F1A-1FEC297173B4}</ProjectGuid>
-    <RootNamespace>common</RootNamespace>
+    <ProjectGuid>{CB66102D-E4F7-47FB-8E70-929B7D332409}</ProjectGuid>
+    <RootNamespace>types</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='debug|x64'" Label="Configuration">
@@ -78,6 +78,13 @@
       <AdditionalLibraryDirectories>..\utilities\lib</AdditionalLibraryDirectories>
     </Lib>
   </ItemDefinitionGroup>
+  <ItemGroup>
+    <ClInclude Include="include\RealArray.h" />
+    <ClInclude Include="include\types.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="tcc\RealArray.tcc" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
