--- a/libraries/utilities/utilities.vcxproj
+++ b/libraries/utilities/utilities.vcxproj
@@ -53,7 +53,7 @@
       <SDLCheck>true</SDLCheck>
       <PrecompiledHeaderFile />
       <PrecompiledHeaderOutputFile />
-      <AdditionalIncludeDirectories>include;..\common\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>include;..\types\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -68,7 +68,7 @@
       <SDLCheck>true</SDLCheck>
       <PrecompiledHeaderFile />
       <PrecompiledHeaderOutputFile />
-      <AdditionalIncludeDirectories>include;..\common\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>include;..\types\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
