--- a/libraries/common/common.vcxproj
+++ b/libraries/common/common.vcxproj
@@ -10,6 +10,16 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="include\DatasetLoader.h" />
+    <ClInclude Include="include\DatasetMapLoader.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\DatasetMapLoader.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="tcc\DatasetLoader.tcc" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{50EE045D-4DAA-44B9-9F1A-1FEC297173B4}</ProjectGuid>
     <RootNamespace>common</RootNamespace>
@@ -51,7 +61,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>include;..\types\include;..\utilities\include;..\layers\include;..\dataset\include;..\linear\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -67,7 +77,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>include;..\types\include;..\utilities\include;..\layers\include;..\dataset\include;..\linear\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
