--- a/libraries/dataset/dataset.vcxproj
+++ b/libraries/dataset/dataset.vcxproj
@@ -51,7 +51,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>include;..\linear\include;..\types\include;..\layers\include;..\utilities\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>include;..\utilities\include;..\linear\include;..\types\include;..\layers\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -68,7 +68,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>include;..\linear\include;..\types\include;..\layers\include;..\utilities\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>include;..\utilities\include;..\linear\include;..\types\include;..\layers\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
