--- a/libraries/layers/CMakeLists.txt
+++ b/libraries/layers/CMakeLists.txt
@@ -41,7 +41,7 @@ source_group("tcc" FILES ${TCC})
 
 include_directories(include)
 include_directories(tcc)
-include_directories(../common/include)
+include_directories(../types/include)
 include_directories(../utilities/include)
 
 add_library(layers ${SRC} ${INCLUDE} ${TCC})
