--- a/libraries/linear/CMakeLists.txt
+++ b/libraries/linear/CMakeLists.txt
@@ -34,6 +34,6 @@ source_group("tcc" FILES ${TCC})
 
 include_directories(include)
 include_directories(tcc)
-include_directories(../common/include)
+include_directories(../types/include)
 
 add_library(linear ${SRC} ${INCLUDE} ${TCC})
