--- a/libraries/utilities/CMakeLists.txt
+++ b/libraries/utilities/CMakeLists.txt
@@ -9,30 +9,38 @@ set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y")
 
 set (SRC src/BinaryClassificationEvaluator.cpp
                    src/CommandLineParser.cpp
+                   src/DataLoadArguments.cpp
+                   src/DataSaveArguments.cpp
                    src/JsonSerializer.cpp
+                   src/MapLoadArguments.cpp
+                   src/MapSaveArguments.cpp
                    src/files.cpp
                    src/randomEngines.cpp
                    ../amalgamated_jsoncpp/jsoncpp.cpp)
 
 set (INCLUDE include/BinaryClassificationEvaluator.h
                        include/CommandLineParser.h
+                       include/DataLoadArguments.h
+                       include/DataSaveArguments.h
                        include/JsonSerializer.h
+                       include/MapLoadArguments.h
+                       include/MapSaveArguments.h
                        include/Parser.h
-                       include/SharedArguments.h
                        include/files.h
                        include/randomEngines.h)
 
 set (TCC tcc/BinaryClassificationEvaluator.tcc
                    tcc/CommandLineParser.tcc
                    tcc/JsonSerializer.tcc
-                   tcc/Parser.tcc)
-
+                   tcc/Parser.tcc
+                   tcc/VectorIterator.tcc)
+                   
 source_group("src" FILES ${SRC})
 source_group("include" FILES ${INCLUDE})
 source_group("tcc" FILES ${TCC})
 
 include_directories(include)
 include_directories(tcc)
-include_directories(../common/include)
+include_directories(../types/include)
 
 add_library(utilities ${SRC} ${INCLUDE} ${TCC})
