--- a/libraries/tree_layout/CMakeLists.txt
+++ b/libraries/tree_layout/CMakeLists.txt
@@ -1,9 +1,12 @@
 #
-# cmake file for tree_layout library
+# cmake file
 #
 
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8.5)
-PROJECT(tree_layout)
+
+set (PROJ_NAME tree_layout)
+
+PROJECT(${PROJ_NAME})
 
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y")
 
@@ -23,4 +26,7 @@ include_directories(include)
 include_directories(tcc)
 include_directories(../types/include)
 
-add_library(tree_layout ${SRC} ${INCLUDE} ${TCC})
+add_library(${PROJ_NAME} ${SRC} ${INCLUDE} ${TCC})
+
+set_property(TARGET ${PROJ_NAME} PROPERTY FOLDER "libraries")
+
